--- a/index.html
+++ b/index.html
@@ -1,5 +1,1 @@
-Hi,这里是我为首我允许的人使用的库,需要页面编名才能查看各个页面,请前往新的网页
-
-当前网址/页面名
-
-若此网址已在末尾有/,请只在末尾加上页面名
+Hi,这里是我为首我允许的人使用的库,需要页面编名才能查看各个页面,请前往新的网页:当前网址/页面名.若此网址已在末尾有/,请只在末尾加上页面名
