--- a/hello-2025.html
+++ b/hello-2025.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Title</title>
+<title>Hello!2025 - 你好，2025 - 启航！2025 - dudushsh2014@outlook.com制作</title>
 </head>
 <body>
-<img src="https://github-production-user-asset-6210df.s3.amazonaws.com/159882578/399550864-078d6e5c-8aee-4690-9ab5-284e6270b799.jpeg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAVCODYLSA53PQK4ZA%2F20250101%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20250101T084714Z&X-Amz-Expires=300&X-Amz-Signature=dfa975acf00c3069602c53fcb1e6b2fbff575869e369b198244f0bcba64641dc&X-Amz-SignedHeaders=host" width="300" height="300">
+<img src="hello2025" width="300" height="300">
+Bye-bye 2024; Hello, 2025!
 </body>
 </html>
