--- a/hello-2025.html
+++ b/hello-2025.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Hello!2025 - 你好，2025 - 启航！2025 - dudushsh2014@outlook.com制作</title>
+<title>Hello!2025 - 你好，2025 - 启航！2025</title>
 </head>
 <body>
-<img src="hello2025" width="300" height="300">
+<img src="hello2025" width="1000" height="1000">
+联系我：dudushsh2014@Outlook.com
 Bye-bye 2024; Hello, 2025!
 </body>
 </html>
