--- a/hello-2025.html
+++ b/hello-2025.html
@@ -5,7 +5,7 @@
 <title>Hello!2025 - 你好，2025 - 启航！2025</title>
 </head>
 <body>
-<img src="hello2025" width="1000" height="1000">
+<img src="hello2025.jpeg" width="1000" height="1000">
 联系我：dudushsh2014@Outlook.com
 Bye-bye 2024; Hello, 2025!
 </body>
