--- a/hello-2025.html
+++ b/hello-2025.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <img src="hello2025.jpeg" width="1000" height="1000">
-happy
+快乐happy！
 联系我：dudushsh2014@Outlook.com
 Bye-bye 2024; Hello, 2025!
 </body>
