--- a/ZUN5secondsPASSbv.html
+++ b/ZUN5secondsPASSbv.html
@@ -1,1 +1,2 @@
-<iframe src="//player.bilibili.com/player.html?isOutside=true&aid=591267786&bvid=BV1Nq4y1R7sN&cid=431207790&p=1" scrolling="no" border="1" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
+<title>由于站长技术不好，所以请放大观看</title>
+<iframe src="//player.bilibili.com/player.html?isOutside=true&aid=591267786&bvid=BV1Nq4y1R7sN&cid=431207790&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
