--- a/ZUN6JPEQ01.html
+++ b/ZUN6JPEQ01.html
@@ -1,1 +1,2 @@
+<title>由于站长技术不好，所以请放大观看</title>
 <iframe src="//player.bilibili.com/player.html?isOutside=true&aid=501735653&bvid=BV1MN411d7Jj&cid=297796527&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
