--- a/xsqblacklist.html
+++ b/xsqblacklist.html
@@ -1,6 +1,6 @@
 <title>学生群黑名单公示列表</title>
-<title114>学生群黑名单公示列表</title114><br>
-<p1>虚位以待</p1><br>
+<title114>学生群黑名单公示列表</title114><br><br>
+<p1>盛** wxid_kmn1xd7kp3rc22，大号wxid_apj8lxwovdqz22</p1><br>
 <p2>虚位以待</p2><br>
 <p3>虚位以待</p3><br>
 <p4>虚位以待</p4><br>
