--- a/xsqblacklist.html
+++ b/xsqblacklist.html
@@ -1,6 +1,8 @@
 <title>学生群黑名单公示列表</title>
-<title114>学生群黑名单公示列表</title114><br><br>
-<p1>盛** wxid_kmn1xd7kp3rc22，大号wxid_apj8lxwovdqz22</p1><br>
+<title114>学生群黑名单公示列表</title114><br>
+<rule1>0-警告 1-踢出 2-永不许再进群</rule1><br><br>
+<rule2>名 信息 类型 (值) 日期
+<p1>盛** wxid_kmn1xd7kp3rc22，大号wxid_apj8lxwovdqz22 0 20250220</p1><br>
 <p2>虚位以待</p2><br>
 <p3>虚位以待</p3><br>
 <p4>虚位以待</p4><br>
